#103 - mobile styling, styles to improve readability, minor style fixes

--- a/assets/styles/scss/components/project/_ProjectSection.scss
+++ b/assets/styles/scss/components/project/_ProjectSection.scss
@@ -9,5 +9,19 @@
 		margin-left: auto;
 		margin-right: auto;
 		padding: 0;
+		border-radius: 10px;
+		border: 2px solid color(grey-lighter);
+		overflow: hidden;
+
+		> li {
+
+			&:first-child {
+				border-top: none;
+			}
+
+			&:last-child {
+				border-bottom: none;
+			}
+		}
 	}
 }//.ptc-ProjectSection
